[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/textures/fort.png" type="Texture" id=1]
[ext_resource path="res://staticobjects/Fort/Tower.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 9.0

[sub_resource type="CircleShape2D" id=2]
radius = 80.0

[node name="Tower" type="StaticBody2D" groups=["walls"]]
collision_layer = 64
collision_mask = 0
input_pickable = true
script = ExtResource( 2 )

[node name="Body" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 16, 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="GunTimer" type="Timer" parent="."]

[node name="DetectRadius" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectRadius"]
shape = SubResource( 2 )

[node name="Turret" type="Node2D" parent="."]

[node name="Muzzle" type="Position2D" parent="Turret"]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="input_event" from="." to="." method="_on_Tower_input_event"]
[connection signal="timeout" from="GunTimer" to="." method="_on_GunTimer_timeout"]
[connection signal="body_entered" from="DetectRadius" to="." method="_on_DetectRadius_body_entered"]
[connection signal="body_exited" from="DetectRadius" to="." method="_on_DetectRadius_body_exited"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
